<resources>
    <string name="app_name">VideoPhotoAudio</string>
    <string name="camera_btn">Камера</string>
    <string name="audio_video_btn">Звуки и Видео</string>
    <string name="show_image_btn">Изображения</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="music">Listen this sound</string>
    <string name="video">Watch this video</string>
    <string name="photo">Photo</string>
    <string name="click">Click</string>
</resources>